Fix the spacing

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  background: linear-gradient(to bottom, rgba(16, 52, 41, 0), rgba(16, 52, 41, .8)), url("../images/banner.jpg");
+  background: url("../images/banner.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   max-width: 100%;
@@ -46,13 +46,17 @@ body {
 
 .banner {
   color: #fff;
+  background: linear-gradient(to bottom, rgba(16, 52, 41, 0), rgba(16, 52, 41, .8));
 }
 
 .banner-content {
-  padding-top: 7em;
-  background-image: url("../images/two-leaves.svg");
+  padding-top: 4em;
+  background: top left .75em no-repeat url("../images/two-leaves.svg");
   background-size: 100px;
-  background-repeat: no-repeat;
+}
+
+div p {
+  padding-top: 2em;
 }
 
 @media only screen and (min-width: 60em) {
